...
        questionTextLabel.text = step.question
        questionNumberLabel.text = step.questionNumber
    }
    
    func show(quiz result: QuizResultsViewModel) {
        let alertModel: AlertModel = AlertModel(
            accessibilityIdentifier: "GameResults",
            title: result.title,
            message: result.text,
            buttonText: result.buttonText) { [weak self] in
                guard let self else { return }
                
                presenter?.restartGame()
...
